# gb-elections-dashboard

./: .gitignore  07f86cf2-9c6b-4249-ba83-c23e03481d2b.jfif  2e08e27b-32c7-4ecd-a9be-314ba6d84c0f.jfif  4a0d551e-bdfe-414c-88eb-f9862f5a8446.jfif  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GB_2026_Candidates_Final_List.csv  GB_2026_Constituency_Summary.csv  GB_2026_REVISED_Predictions_28May.xlsx  LICENSE  LICENSE-DATA  README.md  deep-research-report.md  download.jfif  gilgit_baltistan_elections_research.md  queens_student_managed_fund_logo.jfif
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  data-fix.md  feature.md
.github/workflows/: ci.yml
data/clean/: candidate_runs.csv  candidate_runs.parquet  candidate_runs_with_id.csv  candidate_runs_with_id.parquet  candidates.csv  candidates.parquet  constituencies.csv  constituencies.parquet  constituency_election_summary.csv  constituency_election_summary.parquet  elections.csv  elections.parquet  feature_matrix.csv  feature_matrix.parquet  parties.csv  parties.parquet  predictions_2026.csv  predictions_2026.parquet
data/exports/: baseline_report.json  candidate_runs.json  constituency_election_summary.json  elections.json  notable_disqualifications.json  predictions_2020_holdout.json  predictions_2026.json  (+5 more)
docs/: data_dictionary.md  deployment.md  methodology_results.md  predictive_model_report_rev3.md  research_pack.md
model/: pyproject.toml
model/artefacts/: baseline_report.json  forecast_summary_2026.json  predictions_2020_holdout.csv  training_report.json
model/src/gb_model/: __init__.py  baseline.py  candidate_ids.py  features.py  predict_2026.py  train.py
model/tests/: test_baseline.py  test_candidate_ids.py  test_features.py
pipeline/: pyproject.toml
pipeline/src/gb_pipeline/: __init__.py  clean.py  convert_predictions.py  convert_predictions_v3.py  convert_predictions_v4.py  crop_image.ps1  debug_v5_csv.py  export_json.py  http.py  ocr_image.ps1  parties.py  scrape_wikipedia.py  sweep.py  upscale_image.ps1
pipeline/tests/: test_parties.py  test_scrape_wikipedia.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
(+62 files in other folders)
