[project]
name = "gb-pipeline"
version = "0.1.0"
description = "Data extraction pipeline for Gilgit-Baltistan Election Forecast 2026"
requires-python = "==3.11.*"
authors = [{ name = "Syed Aamir Adnan" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "rapidfuzz>=3.9",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",
    "pillow>=10.3",
    "tenacity>=8.5",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.32",
    "types-beautifulsoup4>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gb_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
